# Web3_Get_Set_Contract_Metamask

./: PriceFeed  README.md  _config.yml  index.css  index.html  index.js
Contract_Get_Set/: Get_Set_Contract  Get_Set_Contract.sol  PublishSourceCodeEtherscan  SimpleStorage | 0xaf3310ec212ecba069149239f954f1281fda836b.desktop
Contracts/: AssemblyStorage.sol  Bank.sol  EventCounter.sol  FluentSdkRustPrbMathTestValues.sol  FluentSdkRustTypesTest.sol  FluentTestFunctionInputValues.sol  LinkTokenExperimental.sol  LinkTokenSolidity0.8.0.sol  MultiCall.sol  ShardeumStablecoins.sol  SimpleStorage.sol  Store.sol  TransientStorage.sol  TransientStorageVaraibleType.sol  WSHM.sol  codeHash.sol  contractSizeSpuriousDragonEIP170.sol  deploySameAddress.sol  faucetSHM.sol  forLoopsUncheckedGasBenchmark.sol  generalDeploySameAddress.sol  inheritor.sol  interactWSHM.sol  pbrMathLogTesting.sol  pbrMathLogarithmTesting.sol  pbrMathSquareRootTesting.sol  prbMathLogarithmTesting.sol  prbMathSquareRootTesting.sol  test.fe  test.huff  test.lll  test.vy  test.yul
Contracts/bulkTransfers/: bulkTransferERC20.sol  bulkTransferERC721.sol  bulkTransferMsgValue.sol  bulkTransferWithBatchERC1155.sol
FrontEnd/: AdminSupport.html  BuyPage.html  HomePage.html
Scripts/: EIP_2930_Tx.py  Store.go  app.js  deploy_contract.js  readEvent.go  readStateAndEvent.go  setValueTx.py
Scripts/c/: getRequest.c  readContract.c
Scripts/c#/get_latest_block/: a.cs  (+1 more)
Scripts/c++/: getLatestBlock.cpp  getRequest.cpp
Scripts/go/: Store.go  fluentGetValues.go  getJSON.go  getSetEvent.go  getSetEventWithRawData.go  go.mod  go.sum  goRoutineWaitDefer.go  rawRpcMethodCall.go  readStateAndEvent.go  sendRawTx.go  testEthCall.go  websocketServerPingPong.go
Scripts/java/: pom.xml
Scripts/javascript/: fe_contract_deploy.js  readWriteSubscribe.js  web3localTxAndSub.js
Scripts/nim/: test.nim
Scripts/node.js/: ShardeumBulkRegisterAccessListTest.js  ShardeumContractEIP2930MulticallContracts.js  ShardeumCycleBlockEventListener.js  ShardeumCycleTransactionPageReadExample.js  ShardeumLegacyEIP2930ContractStorage.js  ShardeumLegacyEIP2930NoStorage.js  ShardeumRPCtestingLocalNode.js  ShardeumTestGetTransactionByHash.js  ShardeumWSHM.js  ShardeumWeb3localTxAndSub.js  ensAddressName.js  eth_getAccessList_Tests.js  etherTest.js  shardeumRPCtestingLocalNode.js  storageSlot.js  test.js  testNew.js  web3localTxAndSub.js  websocketClient.js  websocketServer.js  websocketServerShardeum.js
Scripts/python/: EIP_1559_Tx.py  EIP_2930_Contract_Storage_Tx.py  EIP_2930_Tx.py  EIP_2930_Wallet_No_Storage_Tx.py  Legacy_Tx.py  ShardeumContractEIP2930MulticallContracts.py  ShardeumCycleBlockEventListener.py  ShardeumCycleTransactionPageReadExample.py  ShardeumLegacyEIP2930ContractStorage.py  ShardeumLegacyEIP2930WalletNoStorage.py  contractMethodTx.py  readWriteSubscribe.py  sendRawContractTx.py  setValueTx.py  test.py  websocketSubscribeBlocks.py
Scripts/rust/fluent/crate_test_rust_decimals/: Cargo.toml
Scripts/rust/fluent/crate_test_rust_decimals/src/: lib.rs
Scripts/rust/fluent/types_functions_types/: Cargo.toml
Scripts/rust/fluent/types_functions_types/src/: lib.rs
Scripts/rust/sendEther/: Cargo.toml
Scripts/rust/sendEther/src/: main.rs
Scripts/rust/test-hardware-arduino-uno-r3-onboard-led-blink/: Cargo.toml  README.md
Scripts/rust/test-hardware-arduino-uno-r3-onboard-led-blink/src/: main.rs
Scripts/rust/test_alloy_contract_read_write_events/: Cargo.toml
Scripts/rust/test_alloy_contract_read_write_events/src/: main.rs
Scripts/rust/test_ethers_outdated/test_ethers_contract_read_write_events/: Cargo.toml  storeAbiBytecode.json
Scripts/rust/test_ethers_outdated/test_ethers_contract_read_write_events/src/: main.rs
Scripts/rust/test_ethers_outdated/test_ethers_read_bytecode_verify/: Cargo.toml
Scripts/rust/test_ethers_outdated/test_ethers_read_bytecode_verify/src/: main.rs
Scripts/rust/test_hardware_raspberry_pi_4_gpio_alloy_events/: Cargo.toml
Scripts/rust/test_hardware_raspberry_pi_4_gpio_alloy_events/src/: main.rs
Scripts/typescript/: ShardeumCycleTransactionLogIndex.js  ShardeumCycleTransactionLogIndex.ts
sass/: bootstrap.css  bootstrap.css.map  main.scss
(+195 files in other folders)
