[package]
name = "sendEther"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web3 = { git = "https://github.com/tomusdrw/rust-web3" }
ethers = "1.0.0"
tokio = { version = "1", features = ["full"] }
eyre = "0.6.8"
