[package]
name = "test_alloy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
alloy = { version = "1.0.23", features = ["full"] }
eyre = "0.6.8"
url = "2.5.2"
futures-util = "0.3.30"
# futures = "0.3.26"
