[package]
name = "test_ethers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = "1.0.0"
ethers-providers = "1.0.2"
ethers-core = "1.0.2"
ethers-signers = "1.0.2"
ethers-middleware = "1.0.2"
ethers-solc = "1.0.2"
ethers-utils = "0.2.0"
eyre = "0.6.8"
futures = "0.3.26"